showcases/hello-istio/hello-istio-70-30.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-istio
spec:
  hosts:
  - "*"
  gateways:
  - hello-istio-gateway
  http:
  - route:
    - destination:
        host: hello-istio
        subset: v1
      weight: 70
    - destination:
        host: hello-istio
        subset: v2
      weight: 30
