showcases/hello-istio/hello-istio-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-istio
spec:
  hosts:
  - "hello-istio.cloud"
  gateways:
  - hello-istio-gateway
  http:
  - match:
    - uri:
        exact: /api/hello
    route:
    - destination:
        host: hello-istio
        port:
          number: 8080
