showcases/hello-istio/hello-istio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-istio
spec:
  rules:
  - host: hello-istio.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-istio
          servicePort: http
