showcases/hello-istio/hello-istio-user-agent.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-istio
spec:
  hosts:
  - "*"
  gateways:
  - hello-istio-gateway
  http:
  - match:
    - headers:
        user-agent:
          regex: ".*Chrome.*"
    route:
      - destination:
          host: hello-istio
          subset: v2
  - route:
    - destination:
        host: hello-istio
        subset: v1
