showcases/hello-istio/hello-istio-user-cookie.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-istio
spec:
  hosts:
  - "hello-istio.cloud"
  gateways:
  - hello-istio-gateway
  http:
  - match:
    - headers:
        cookie:
          regex: "^(.*?;)?(user=oreilly)(;.*)?$"
    route:
      - destination:
          host: hello-istio
          subset: v2
  - route:
    - destination:
        host: hello-istio
        subset: v1
